part2-semantic_analysis/uCsemantic/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> global_declaration_list
Rule 2     global_declaration_list -> global_declaration
Rule 3     global_declaration_list -> global_declaration_list global_declaration
Rule 4     global_declaration -> function_definition
Rule 5     global_declaration -> declaration
Rule 6     function_definition -> declarator declaration_list_emp compound_statement
Rule 7     function_definition -> type_specifier declarator declaration_list_emp compound_statement
Rule 8     type_specifier -> VOID
Rule 9     type_specifier -> CHAR
Rule 10    type_specifier -> INT
Rule 11    type_specifier -> FLOAT
Rule 12    declaration_list -> declaration
Rule 13    declaration_list -> declaration_list declaration
Rule 14    declaration_list_emp -> declaration_list
Rule 15    declaration_list_emp -> empty
Rule 16    decl_body -> type_specifier init_declarator_list_emp
Rule 17    declaration -> decl_body SEMI
Rule 18    init_declarator_list -> init_declarator
Rule 19    init_declarator_list -> init_declarator_list COMMA init_declarator
Rule 20    init_declarator_list_emp -> init_declarator_list
Rule 21    init_declarator_list_emp -> empty
Rule 22    init_declarator -> declarator
Rule 23    init_declarator -> declarator EQUALS initializer
Rule 24    declarator -> direct_declarator
Rule 25    declarator -> pointer direct_declarator
Rule 26    pointer -> TIMES
Rule 27    pointer -> TIMES pointer
Rule 28    direct_declarator -> identifier
Rule 29    direct_declarator -> LPAREN declarator RPAREN
Rule 30    direct_declarator -> direct_declarator LBRACKET constant_expression_emp RBRACKET
Rule 31    direct_declarator -> direct_declarator LPAREN parameter_list RPAREN
Rule 32    direct_declarator -> direct_declarator LPAREN identifier_list_emp RPAREN
Rule 33    parameter_list -> parameter_declaration
Rule 34    parameter_list -> parameter_list COMMA parameter_declaration
Rule 35    parameter_declaration -> type_specifier declarator
Rule 36    identifier_list -> identifier
Rule 37    identifier_list -> identifier_list COMMA identifier
Rule 38    identifier_list_emp -> identifier_list
Rule 39    identifier_list_emp -> empty
Rule 40    constant_expression -> binary_expression
Rule 41    constant_expression_emp -> empty
Rule 42    constant_expression_emp -> constant_expression
Rule 43    binary_expression -> cast_expression
Rule 44    binary_expression -> binary_expression TIMES binary_expression
Rule 45    binary_expression -> binary_expression DIV binary_expression
Rule 46    binary_expression -> binary_expression MOD binary_expression
Rule 47    binary_expression -> binary_expression PLUS binary_expression
Rule 48    binary_expression -> binary_expression MINUS binary_expression
Rule 49    binary_expression -> binary_expression LT binary_expression
Rule 50    binary_expression -> binary_expression LTE binary_expression
Rule 51    binary_expression -> binary_expression GT binary_expression
Rule 52    binary_expression -> binary_expression GTE binary_expression
Rule 53    binary_expression -> binary_expression EQ binary_expression
Rule 54    binary_expression -> binary_expression NEQ binary_expression
Rule 55    binary_expression -> binary_expression AND binary_expression
Rule 56    binary_expression -> binary_expression OR binary_expression
Rule 57    cast_expression -> unary_expression
Rule 58    cast_expression -> LPAREN type_specifier RPAREN cast_expression
Rule 59    unary_expression -> postfix_expression
Rule 60    unary_expression -> PLUSPLUS unary_expression
Rule 61    unary_expression -> MINUSMINUS unary_expression
Rule 62    unary_expression -> unary_operator cast_expression
Rule 63    postfix_expression -> primary_expression
Rule 64    postfix_expression -> postfix_expression LBRACKET expression RBRACKET
Rule 65    postfix_expression -> postfix_expression LPAREN argument_expression RPAREN
Rule 66    postfix_expression -> postfix_expression LPAREN RPAREN
Rule 67    postfix_expression -> postfix_expression PLUSPLUS
Rule 68    postfix_expression -> postfix_expression MINUSMINUS
Rule 69    primary_expression -> identifier
Rule 70    primary_expression -> constant
Rule 71    primary_expression -> string
Rule 72    primary_expression -> LPAREN expression RPAREN
Rule 73    identifier -> ID
Rule 74    constant -> INT_CONST
Rule 75    constant -> CHAR_CONST
Rule 76    constant -> FLOAT_CONST
Rule 77    string -> STRING
Rule 78    expression -> assignment_expression
Rule 79    expression -> expression COMMA assignment_expression
Rule 80    argument_expression -> assignment_expression
Rule 81    argument_expression -> argument_expression COMMA assignment_expression
Rule 82    assignment_expression -> binary_expression
Rule 83    assignment_expression -> unary_expression assignment_operator assignment_expression
Rule 84    assignment_operator -> EQUALS
Rule 85    assignment_operator -> TIMESEQ
Rule 86    assignment_operator -> DIVEQ
Rule 87    assignment_operator -> MODEQ
Rule 88    assignment_operator -> PLUSEQ
Rule 89    assignment_operator -> MINUSEQ
Rule 90    unary_operator -> ADDR
Rule 91    unary_operator -> TIMES
Rule 92    unary_operator -> PLUS
Rule 93    unary_operator -> MINUS
Rule 94    unary_operator -> NOT
Rule 95    initializer -> assignment_expression
Rule 96    initializer -> LBRACE initializer_list RBRACE
Rule 97    initializer -> LBRACE initializer_list COMMA RBRACE
Rule 98    initializer_list -> initializer
Rule 99    initializer_list -> initializer_list COMMA initializer
Rule 100   block_item -> declaration
Rule 101   block_item -> statement
Rule 102   block_item_list -> block_item
Rule 103   block_item_list -> block_item_list block_item
Rule 104   block_item_list_emp -> empty
Rule 105   block_item_list_emp -> block_item_list
Rule 106   compound_statement -> LBRACE block_item_list_emp RBRACE
Rule 107   statement -> expression_statement
Rule 108   statement -> compound_statement
Rule 109   statement -> selection_statement
Rule 110   statement -> iteration_statement
Rule 111   statement -> jump_statement
Rule 112   statement -> assert_statement
Rule 113   statement -> print_statement
Rule 114   statement -> read_statement
Rule 115   expression_statement -> expression SEMI
Rule 116   selection_statement -> IF LPAREN expression RPAREN statement
Rule 117   selection_statement -> IF LPAREN expression RPAREN statement ELSE statement
Rule 118   iteration_statement -> WHILE LPAREN expression RPAREN statement
Rule 119   iteration_statement -> FOR LPAREN expression_emp SEMI expression_emp SEMI expression_emp RPAREN statement
Rule 120   iteration_statement -> FOR LPAREN declaration expression_emp SEMI expression_emp RPAREN statement
Rule 121   expression_emp -> empty
Rule 122   expression_emp -> expression
Rule 123   jump_statement -> BREAK SEMI
Rule 124   jump_statement -> RETURN expression_emp SEMI
Rule 125   assert_statement -> ASSERT expression SEMI
Rule 126   print_statement -> PRINT LPAREN expression_emp RPAREN SEMI
Rule 127   read_statement -> READ LPAREN argument_expression RPAREN SEMI
Rule 128   empty -> <empty>

Terminals, with rules where they appear

ADDR                 : 90
AND                  : 55
ASSERT               : 125
BREAK                : 123
CHAR                 : 9
CHAR_CONST           : 75
COMMA                : 19 34 37 79 81 97 99
DIV                  : 45
DIVEQ                : 86
ELSE                 : 117
EQ                   : 53
EQUALS               : 23 84
FLOAT                : 11
FLOAT_CONST          : 76
FOR                  : 119 120
GT                   : 51
GTE                  : 52
ID                   : 73
IF                   : 116 117
INT                  : 10
INT_CONST            : 74
LBRACE               : 96 97 106
LBRACKET             : 30 64
LPAREN               : 29 31 32 58 65 66 72 116 117 118 119 120 126 127
LT                   : 49
LTE                  : 50
MINUS                : 48 93
MINUSEQ              : 89
MINUSMINUS           : 61 68
MOD                  : 46
MODEQ                : 87
NEQ                  : 54
NOT                  : 94
OR                   : 56
PLUS                 : 47 92
PLUSEQ               : 88
PLUSPLUS             : 60 67
PRINT                : 126
RBRACE               : 96 97 106
RBRACKET             : 30 64
READ                 : 127
RETURN               : 124
RPAREN               : 29 31 32 58 65 66 72 116 117 118 119 120 126 127
SEMI                 : 17 115 119 119 120 123 124 125 126 127
STRING               : 77
TIMES                : 26 27 44 91
TIMESEQ              : 85
VOID                 : 8
WHILE                : 118
error                : 

Nonterminals, with rules where they appear

argument_expression  : 65 81 127
assert_statement     : 112
assignment_expression : 78 79 80 81 83 95
assignment_operator  : 83
binary_expression    : 40 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 82
block_item           : 102 103
block_item_list      : 103 105
block_item_list_emp  : 106
cast_expression      : 43 58 62
compound_statement   : 6 7 108
constant             : 70
constant_expression  : 42
constant_expression_emp : 30
decl_body            : 17
declaration          : 5 12 13 100 120
declaration_list     : 13 14
declaration_list_emp : 6 7
declarator           : 6 7 22 23 29 35
direct_declarator    : 24 25 30 31 32
empty                : 15 21 39 41 104 121
expression           : 64 72 79 115 116 117 118 122 125
expression_emp       : 119 119 119 120 120 124 126
expression_statement : 107
function_definition  : 4
global_declaration   : 2 3
global_declaration_list : 1 3
identifier           : 28 36 37 69
identifier_list      : 37 38
identifier_list_emp  : 32
init_declarator      : 18 19
init_declarator_list : 19 20
init_declarator_list_emp : 16
initializer          : 23 98 99
initializer_list     : 96 97 99
iteration_statement  : 110
jump_statement       : 111
parameter_declaration : 33 34
parameter_list       : 31 34
pointer              : 25 27
postfix_expression   : 59 64 65 66 67 68
primary_expression   : 63
print_statement      : 113
program              : 0
read_statement       : 114
selection_statement  : 109
statement            : 101 116 117 117 118 119 120
string               : 71
type_specifier       : 7 16 35 58
unary_expression     : 57 60 61 83
unary_operator       : 62

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . global_declaration_list
    (2) global_declaration_list -> . global_declaration
    (3) global_declaration_list -> . global_declaration_list global_declaration
    (4) global_declaration -> . function_definition
    (5) global_declaration -> . declaration
    (6) function_definition -> . declarator declaration_list_emp compound_statement
    (7) function_definition -> . type_specifier declarator declaration_list_emp compound_statement
    (17) declaration -> . decl_body SEMI
    (24) declarator -> . direct_declarator
    (25) declarator -> . pointer direct_declarator
    (8) type_specifier -> . VOID
    (9) type_specifier -> . CHAR
    (10) type_specifier -> . INT
    (11) type_specifier -> . FLOAT
    (16) decl_body -> . type_specifier init_declarator_list_emp
    (28) direct_declarator -> . identifier
    (29) direct_declarator -> . LPAREN declarator RPAREN
    (30) direct_declarator -> . direct_declarator LBRACKET constant_expression_emp RBRACKET
    (31) direct_declarator -> . direct_declarator LPAREN parameter_list RPAREN
    (32) direct_declarator -> . direct_declarator LPAREN identifier_list_emp RPAREN
    (26) pointer -> . TIMES
    (27) pointer -> . TIMES pointer
    (73) identifier -> . ID

    VOID            shift and go to state 11
    CHAR            shift and go to state 12
    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    LPAREN          shift and go to state 16
    TIMES           shift and go to state 17
    ID              shift and go to state 18

    program                        shift and go to state 1
    global_declaration_list        shift and go to state 2
    global_declaration             shift and go to state 3
    function_definition            shift and go to state 4
    declaration                    shift and go to state 5
    declarator                     shift and go to state 6
    type_specifier                 shift and go to state 7
    decl_body                      shift and go to state 8
    direct_declarator              shift and go to state 9
    pointer                        shift and go to state 10
    identifier                     shift and go to state 15

state 1

    (0) S' -> program .



state 2

    (1) program -> global_declaration_list .
    (3) global_declaration_list -> global_declaration_list . global_declaration
    (4) global_declaration -> . function_definition
    (5) global_declaration -> . declaration
    (6) function_definition -> . declarator declaration_list_emp compound_statement
    (7) function_definition -> . type_specifier declarator declaration_list_emp compound_statement
    (17) declaration -> . decl_body SEMI
    (24) declarator -> . direct_declarator
    (25) declarator -> . pointer direct_declarator
    (8) type_specifier -> . VOID
    (9) type_specifier -> . CHAR
    (10) type_specifier -> . INT
    (11) type_specifier -> . FLOAT
    (16) decl_body -> . type_specifier init_declarator_list_emp
    (28) direct_declarator -> . identifier
    (29) direct_declarator -> . LPAREN declarator RPAREN
    (30) direct_declarator -> . direct_declarator LBRACKET constant_expression_emp RBRACKET
    (31) direct_declarator -> . direct_declarator LPAREN parameter_list RPAREN
    (32) direct_declarator -> . direct_declarator LPAREN identifier_list_emp RPAREN
    (26) pointer -> . TIMES
    (27) pointer -> . TIMES pointer
    (73) identifier -> . ID

    $end            reduce using rule 1 (program -> global_declaration_list .)
    VOID            shift and go to state 11
    CHAR            shift and go to state 12
    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    LPAREN          shift and go to state 16
    TIMES           shift and go to state 17
    ID              shift and go to state 18

    global_declaration             shift and go to state 19
    function_definition            shift and go to state 4
    declaration                    shift and go to state 5
    declarator                     shift and go to state 6
    type_specifier                 shift and go to state 7
    decl_body                      shift and go to state 8
    direct_declarator              shift and go to state 9
    pointer                        shift and go to state 10
    identifier                     shift and go to state 15

state 3

    (2) global_declaration_list -> global_declaration .

    VOID            reduce using rule 2 (global_declaration_list -> global_declaration .)
    CHAR            reduce using rule 2 (global_declaration_list -> global_declaration .)
    INT             reduce using rule 2 (global_declaration_list -> global_declaration .)
    FLOAT           reduce using rule 2 (global_declaration_list -> global_declaration .)
    LPAREN          reduce using rule 2 (global_declaration_list -> global_declaration .)
    TIMES           reduce using rule 2 (global_declaration_list -> global_declaration .)
    ID              reduce using rule 2 (global_declaration_list -> global_declaration .)
    $end            reduce using rule 2 (global_declaration_list -> global_declaration .)


state 4

    (4) global_declaration -> function_definition .

    VOID            reduce using rule 4 (global_declaration -> function_definition .)
    CHAR            reduce using rule 4 (global_declaration -> function_definition .)
    INT             reduce using rule 4 (global_declaration -> function_definition .)
    FLOAT           reduce using rule 4 (global_declaration -> function_definition .)
    LPAREN          reduce using rule 4 (global_declaration -> function_definition .)
    TIMES           reduce using rule 4 (global_declaration -> function_definition .)
    ID              reduce using rule 4 (global_declaration -> function_definition .)
    $end            reduce using rule 4 (global_declaration -> function_definition .)


state 5

    (5) global_declaration -> declaration .

    VOID            reduce using rule 5 (global_declaration -> declaration .)
    CHAR            reduce using rule 5 (global_declaration -> declaration .)
    INT             reduce using rule 5 (global_declaration -> declaration .)
    FLOAT           reduce using rule 5 (global_declaration -> declaration .)
    LPAREN          reduce using rule 5 (global_declaration -> declaration .)
    TIMES           reduce using rule 5 (global_declaration -> declaration .)
    ID              reduce using rule 5 (global_declaration -> declaration .)
    $end            reduce using rule 5 (global_declaration -> declaration .)


state 6

    (6) function_definition -> declarator . declaration_list_emp compound_statement
    (14) declaration_list_emp -> . declaration_list
    (15) declaration_list_emp -> . empty
    (12) declaration_list -> . declaration
    (13) declaration_list -> . declaration_list declaration
    (128) empty -> .
    (17) declaration -> . decl_body SEMI
    (16) decl_body -> . type_specifier init_declarator_list_emp
    (8) type_specifier -> . VOID
    (9) type_specifier -> . CHAR
    (10) type_specifier -> . INT
    (11) type_specifier -> . FLOAT

    LBRACE          reduce using rule 128 (empty -> .)
    VOID            shift and go to state 11
    CHAR            shift and go to state 12
    INT             shift and go to state 13
    FLOAT           shift and go to state 14

    declaration_list_emp           shift and go to state 20
    declaration_list               shift and go to state 21
    empty                          shift and go to state 22
    declaration                    shift and go to state 23
    decl_body                      shift and go to state 8
    type_specifier                 shift and go to state 24

state 7

    (7) function_definition -> type_specifier . declarator declaration_list_emp compound_statement
    (16) decl_body -> type_specifier . init_declarator_list_emp
    (24) declarator -> . direct_declarator
    (25) declarator -> . pointer direct_declarator
    (20) init_declarator_list_emp -> . init_declarator_list
    (21) init_declarator_list_emp -> . empty
    (28) direct_declarator -> . identifier
    (29) direct_declarator -> . LPAREN declarator RPAREN
    (30) direct_declarator -> . direct_declarator LBRACKET constant_expression_emp RBRACKET
    (31) direct_declarator -> . direct_declarator LPAREN parameter_list RPAREN
    (32) direct_declarator -> . direct_declarator LPAREN identifier_list_emp RPAREN
    (26) pointer -> . TIMES
    (27) pointer -> . TIMES pointer
    (18) init_declarator_list -> . init_declarator
    (19) init_declarator_list -> . init_declarator_list COMMA init_declarator
    (128) empty -> .
    (73) identifier -> . ID
    (22) init_declarator -> . declarator
    (23) init_declarator -> . declarator EQUALS initializer

    LPAREN          shift and go to state 16
    TIMES           shift and go to state 17
    SEMI            reduce using rule 128 (empty -> .)
    ID              shift and go to state 18

    declarator                     shift and go to state 25
    init_declarator_list_emp       shift and go to state 26
    direct_declarator              shift and go to state 9
    pointer                        shift and go to state 10
    init_declarator_list           shift and go to state 27
    empty                          shift and go to state 28
    identifier                     shift and go to state 15
    init_declarator                shift and go to state 29

state 8

    (17) declaration -> decl_body . SEMI

    SEMI            shift and go to state 30


state 9

    (24) declarator -> direct_declarator .
    (30) direct_declarator -> direct_declarator . LBRACKET constant_expression_emp RBRACKET
    (31) direct_declarator -> direct_declarator . LPAREN parameter_list RPAREN
    (32) direct_declarator -> direct_declarator . LPAREN identifier_list_emp RPAREN

    VOID            reduce using rule 24 (declarator -> direct_declarator .)
    CHAR            reduce using rule 24 (declarator -> direct_declarator .)
    INT             reduce using rule 24 (declarator -> direct_declarator .)
    FLOAT           reduce using rule 24 (declarator -> direct_declarator .)
    LBRACE          reduce using rule 24 (declarator -> direct_declarator .)
    EQUALS          reduce using rule 24 (declarator -> direct_declarator .)
    COMMA           reduce using rule 24 (declarator -> direct_declarator .)
    SEMI            reduce using rule 24 (declarator -> direct_declarator .)
    RPAREN          reduce using rule 24 (declarator -> direct_declarator .)
    LBRACKET        shift and go to state 31
    LPAREN          shift and go to state 32


state 10

    (25) declarator -> pointer . direct_declarator
    (28) direct_declarator -> . identifier
    (29) direct_declarator -> . LPAREN declarator RPAREN
    (30) direct_declarator -> . direct_declarator LBRACKET constant_expression_emp RBRACKET
    (31) direct_declarator -> . direct_declarator LPAREN parameter_list RPAREN
    (32) direct_declarator -> . direct_declarator LPAREN identifier_list_emp RPAREN
    (73) identifier -> . ID

    LPAREN          shift and go to state 16
    ID              shift and go to state 18

    direct_declarator              shift and go to state 33
    identifier                     shift and go to state 15

state 11

    (8) type_specifier -> VOID .

    LPAREN          reduce using rule 8 (type_specifier -> VOID .)
    TIMES           reduce using rule 8 (type_specifier -> VOID .)
    ID              reduce using rule 8 (type_specifier -> VOID .)
    SEMI            reduce using rule 8 (type_specifier -> VOID .)
    RPAREN          reduce using rule 8 (type_specifier -> VOID .)


state 12

    (9) type_specifier -> CHAR .

    LPAREN          reduce using rule 9 (type_specifier -> CHAR .)
    TIMES           reduce using rule 9 (type_specifier -> CHAR .)
    ID              reduce using rule 9 (type_specifier -> CHAR .)
    SEMI            reduce using rule 9 (type_specifier -> CHAR .)
    RPAREN          reduce using rule 9 (type_specifier -> CHAR .)


state 13

    (10) type_specifier -> INT .

    LPAREN          reduce using rule 10 (type_specifier -> INT .)
    TIMES           reduce using rule 10 (type_specifier -> INT .)
    ID              reduce using rule 10 (type_specifier -> INT .)
    SEMI            reduce using rule 10 (type_specifier -> INT .)
    RPAREN          reduce using rule 10 (type_specifier -> INT .)


state 14

    (11) type_specifier -> FLOAT .

    LPAREN          reduce using rule 11 (type_specifier -> FLOAT .)
    TIMES           reduce using rule 11 (type_specifier -> FLOAT .)
    ID              reduce using rule 11 (type_specifier -> FLOAT .)
    SEMI            reduce using rule 11 (type_specifier -> FLOAT .)
    RPAREN          reduce using rule 11 (type_specifier -> FLOAT .)


state 15

    (28) direct_declarator -> identifier .

    LBRACKET        reduce using rule 28 (direct_declarator -> identifier .)
    LPAREN          reduce using rule 28 (direct_declarator -> identifier .)
    VOID            reduce using rule 28 (direct_declarator -> identifier .)
    CHAR            reduce using rule 28 (direct_declarator -> identifier .)
    INT             reduce using rule 28 (direct_declarator -> identifier .)
    FLOAT           reduce using rule 28 (direct_declarator -> identifier .)
    LBRACE          reduce using rule 28 (direct_declarator -> identifier .)
    EQUALS          reduce using rule 28 (direct_declarator -> identifier .)
    COMMA           reduce using rule 28 (direct_declarator -> identifier .)
    SEMI            reduce using rule 28 (direct_declarator -> identifier .)
    RPAREN          reduce using rule 28 (direct_declarator -> identifier .)


state 16

    (29) direct_declarator -> LPAREN . declarator RPAREN
    (24) declarator -> . direct_declarator
    (25) declarator -> . pointer direct_declarator
    (28) direct_declarator -> . identifier
    (29) direct_declarator -> . LPAREN declarator RPAREN
    (30) direct_declarator -> . direct_declarator LBRACKET constant_expression_emp RBRACKET
    (31) direct_declarator -> . direct_declarator LPAREN parameter_list RPAREN
    (32) direct_declarator -> . direct_declarator LPAREN identifier_list_emp RPAREN
    (26) pointer -> . TIMES
    (27) pointer -> . TIMES pointer
    (73) identifier -> . ID

    LPAREN          shift and go to state 16
    TIMES           shift and go to state 17
    ID              shift and go to state 18

    declarator                     shift and go to state 34
    direct_declarator              shift and go to state 9
    pointer                        shift and go to state 10
    identifier                     shift and go to state 15

state 17

    (26) pointer -> TIMES .
    (27) pointer -> TIMES . pointer
    (26) pointer -> . TIMES
    (27) pointer -> . TIMES pointer

    LPAREN          reduce using rule 26 (pointer -> TIMES .)
    ID              reduce using rule 26 (pointer -> TIMES .)
    TIMES           shift and go to state 17

    pointer                        shift and go to state 35

state 18

    (73) identifier -> ID .

    LBRACKET        reduce using rule 73 (identifier -> ID .)
    LPAREN          reduce using rule 73 (identifier -> ID .)
    VOID            reduce using rule 73 (identifier -> ID .)
    CHAR            reduce using rule 73 (identifier -> ID .)
    INT             reduce using rule 73 (identifier -> ID .)
    FLOAT           reduce using rule 73 (identifier -> ID .)
    LBRACE          reduce using rule 73 (identifier -> ID .)
    EQUALS          reduce using rule 73 (identifier -> ID .)
    COMMA           reduce using rule 73 (identifier -> ID .)
    SEMI            reduce using rule 73 (identifier -> ID .)
    RPAREN          reduce using rule 73 (identifier -> ID .)
    PLUSPLUS        reduce using rule 73 (identifier -> ID .)
    MINUSMINUS      reduce using rule 73 (identifier -> ID .)
    TIMES           reduce using rule 73 (identifier -> ID .)
    DIV             reduce using rule 73 (identifier -> ID .)
    MOD             reduce using rule 73 (identifier -> ID .)
    PLUS            reduce using rule 73 (identifier -> ID .)
    MINUS           reduce using rule 73 (identifier -> ID .)
    LT              reduce using rule 73 (identifier -> ID .)
    LTE             reduce using rule 73 (identifier -> ID .)
    GT              reduce using rule 73 (identifier -> ID .)
    GTE             reduce using rule 73 (identifier -> ID .)
    EQ              reduce using rule 73 (identifier -> ID .)
    NEQ             reduce using rule 73 (identifier -> ID .)
    AND             reduce using rule 73 (identifier -> ID .)
    OR              reduce using rule 73 (identifier -> ID .)
    RBRACKET        reduce using rule 73 (identifier -> ID .)
    TIMESEQ         reduce using rule 73 (identifier -> ID .)
    DIVEQ           reduce using rule 73 (identifier -> ID .)
    MODEQ           reduce using rule 73 (identifier -> ID .)
    PLUSEQ          reduce using rule 73 (identifier -> ID .)
    MINUSEQ         reduce using rule 73 (identifier -> ID .)
    RBRACE          reduce using rule 73 (identifier -> ID .)


state 19

    (3) global_declaration_list -> global_declaration_list global_declaration .

    VOID            reduce using rule 3 (global_declaration_list -> global_declaration_list global_declaration .)
    CHAR            reduce using rule 3 (global_declaration_list -> global_declaration_list global_declaration .)
    INT             reduce using rule 3 (global_declaration_list -> global_declaration_list global_declaration .)
    FLOAT           reduce using rule 3 (global_declaration_list -> global_declaration_list global_declaration .)
    LPAREN          reduce using rule 3 (global_declaration_list -> global_declaration_list global_declaration .)
    TIMES           reduce using rule 3 (global_declaration_list -> global_declaration_list global_declaration .)
    ID              reduce using rule 3 (global_declaration_list -> global_declaration_list global_declaration .)
    $end            reduce using rule 3 (global_declaration_list -> global_declaration_list global_declaration .)


state 20

    (6) function_definition -> declarator declaration_list_emp . compound_statement
    (106) compound_statement -> . LBRACE block_item_list_emp RBRACE

    LBRACE          shift and go to state 37

    compound_statement             shift and go to state 36

state 21

    (14) declaration_list_emp -> declaration_list .
    (13) declaration_list -> declaration_list . declaration
    (17) declaration -> . decl_body SEMI
    (16) decl_body -> . type_specifier init_declarator_list_emp
    (8) type_specifier -> . VOID
    (9) type_specifier -> . CHAR
    (10) type_specifier -> . INT
    (11) type_specifier -> . FLOAT

    LBRACE          reduce using rule 14 (declaration_list_emp -> declaration_list .)
    VOID            shift and go to state 11
    CHAR            shift and go to state 12
    INT             shift and go to state 13
    FLOAT           shift and go to state 14

    declaration                    shift and go to state 38
    decl_body                      shift and go to state 8
    type_specifier                 shift and go to state 24

state 22

    (15) declaration_list_emp -> empty .

    LBRACE          reduce using rule 15 (declaration_list_emp -> empty .)


state 23

    (12) declaration_list -> declaration .

    VOID            reduce using rule 12 (declaration_list -> declaration .)
    CHAR            reduce using rule 12 (declaration_list -> declaration .)
    INT             reduce using rule 12 (declaration_list -> declaration .)
    FLOAT           reduce using rule 12 (declaration_list -> declaration .)
    LBRACE          reduce using rule 12 (declaration_list -> declaration .)


state 24

    (16) decl_body -> type_specifier . init_declarator_list_emp
    (20) init_declarator_list_emp -> . init_declarator_list
    (21) init_declarator_list_emp -> . empty
    (18) init_declarator_list -> . init_declarator
    (19) init_declarator_list -> . init_declarator_list COMMA init_declarator
    (128) empty -> .
    (22) init_declarator -> . declarator
    (23) init_declarator -> . declarator EQUALS initializer
    (24) declarator -> . direct_declarator
    (25) declarator -> . pointer direct_declarator
    (28) direct_declarator -> . identifier
    (29) direct_declarator -> . LPAREN declarator RPAREN
    (30) direct_declarator -> . direct_declarator LBRACKET constant_expression_emp RBRACKET
    (31) direct_declarator -> . direct_declarator LPAREN parameter_list RPAREN
    (32) direct_declarator -> . direct_declarator LPAREN identifier_list_emp RPAREN
    (26) pointer -> . TIMES
    (27) pointer -> . TIMES pointer
    (73) identifier -> . ID

    SEMI            reduce using rule 128 (empty -> .)
    LPAREN          shift and go to state 16
    TIMES           shift and go to state 17
    ID              shift and go to state 18

    init_declarator_list_emp       shift and go to state 26
    init_declarator_list           shift and go to state 27
    empty                          shift and go to state 28
    init_declarator                shift and go to state 29
    declarator                     shift and go to state 39
    direct_declarator              shift and go to state 9
    pointer                        shift and go to state 10
    identifier                     shift and go to state 15

state 25

    (7) function_definition -> type_specifier declarator . declaration_list_emp compound_statement
    (22) init_declarator -> declarator .
    (23) init_declarator -> declarator . EQUALS initializer
    (14) declaration_list_emp -> . declaration_list
    (15) declaration_list_emp -> . empty
    (12) declaration_list -> . declaration
    (13) declaration_list -> . declaration_list declaration
    (128) empty -> .
    (17) declaration -> . decl_body SEMI
    (16) decl_body -> . type_specifier init_declarator_list_emp
    (8) type_specifier -> . VOID
    (9) type_specifier -> . CHAR
    (10) type_specifier -> . INT
    (11) type_specifier -> . FLOAT

    COMMA           reduce using rule 22 (init_declarator -> declarator .)
    SEMI            reduce using rule 22 (init_declarator -> declarator .)
    EQUALS          shift and go to state 41
    LBRACE          reduce using rule 128 (empty -> .)
    VOID            shift and go to state 11
    CHAR            shift and go to state 12
    INT             shift and go to state 13
    FLOAT           shift and go to state 14

    type_specifier                 shift and go to state 24
    declaration_list_emp           shift and go to state 40
    declaration_list               shift and go to state 21
    empty                          shift and go to state 22
    declaration                    shift and go to state 23
    decl_body                      shift and go to state 8

state 26

    (16) decl_body -> type_specifier init_declarator_list_emp .

    SEMI            reduce using rule 16 (decl_body -> type_specifier init_declarator_list_emp .)


state 27

    (20) init_declarator_list_emp -> init_declarator_list .
    (19) init_declarator_list -> init_declarator_list . COMMA init_declarator

    SEMI            reduce using rule 20 (init_declarator_list_emp -> init_declarator_list .)
    COMMA           shift and go to state 42


state 28

    (21) init_declarator_list_emp -> empty .

    SEMI            reduce using rule 21 (init_declarator_list_emp -> empty .)


state 29

    (18) init_declarator_list -> init_declarator .

    COMMA           reduce using rule 18 (init_declarator_list -> init_declarator .)
    SEMI            reduce using rule 18 (init_declarator_list -> init_declarator .)


state 30

    (17) declaration -> decl_body SEMI .

    VOID            reduce using rule 17 (declaration -> decl_body SEMI .)
    CHAR            reduce using rule 17 (declaration -> decl_body SEMI .)
    INT             reduce using rule 17 (declaration -> decl_body SEMI .)
    FLOAT           reduce using rule 17 (declaration -> decl_body SEMI .)
    LPAREN          reduce using rule 17 (declaration -> decl_body SEMI .)
    TIMES           reduce using rule 17 (declaration -> decl_body SEMI .)
    ID              reduce using rule 17 (declaration -> decl_body SEMI .)
    $end            reduce using rule 17 (declaration -> decl_body SEMI .)
    LBRACE          reduce using rule 17 (declaration -> decl_body SEMI .)
    IF              reduce using rule 17 (declaration -> decl_body SEMI .)
    WHILE           reduce using rule 17 (declaration -> decl_body SEMI .)
    FOR             reduce using rule 17 (declaration -> decl_body SEMI .)
    BREAK           reduce using rule 17 (declaration -> decl_body SEMI .)
    RETURN          reduce using rule 17 (declaration -> decl_body SEMI .)
    ASSERT          reduce using rule 17 (declaration -> decl_body SEMI .)
    PRINT           reduce using rule 17 (declaration -> decl_body SEMI .)
    READ            reduce using rule 17 (declaration -> decl_body SEMI .)
    PLUSPLUS        reduce using rule 17 (declaration -> decl_body SEMI .)
    MINUSMINUS      reduce using rule 17 (declaration -> decl_body SEMI .)
    ADDR            reduce using rule 17 (declaration -> decl_body SEMI .)
    PLUS            reduce using rule 17 (declaration -> decl_body SEMI .)
    MINUS           reduce using rule 17 (declaration -> decl_body SEMI .)
    NOT             reduce using rule 17 (declaration -> decl_body SEMI .)
    INT_CONST       reduce using rule 17 (declaration -> decl_body SEMI .)
    CHAR_CONST      reduce using rule 17 (declaration -> decl_body SEMI .)
    FLOAT_CONST     reduce using rule 17 (declaration -> decl_body SEMI .)
    STRING          reduce using rule 17 (declaration -> decl_body SEMI .)
    RBRACE          reduce using rule 17 (declaration -> decl_body SEMI .)
    SEMI            reduce using rule 17 (declaration -> decl_body SEMI .)


state 31
